--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -5,4 +5,6 @@
     <item name="target_language" type="id"/>
     <item name="button_translate" type="id"/>
     <item name="text_translations" type="id"/>
+    <item name="language_icon" type="id"/>
+    <item name="language_text" type="id"/>
 </resources>
