--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,8 +3,10 @@
     <item name="text_input" type="id"/>
     <item name="source_language" type="id"/>
     <item name="target_language" type="id"/>
+    <item name="read_result" type="id"/>
     <item name="button_translate" type="id"/>
     <item name="text_translations" type="id"/>
+    <item name="translation_layout" type="id"/>
     <item name="language_icon" type="id"/>
     <item name="language_text" type="id"/>
 
